<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="detalhes"
        android:enabled="true"
        android:icon="@drawable/compose_icon"
        android:shortcutShortLabel="@string/compose_shortcut_short_label1"
        android:shortcutLongLabel="@string/shortcuts_screen_details"
        android:shortcutDisabledMessage="@string/compose_disabled_message1">
        <intent
            android:action="android.intent.action.VIEW"
           android:data="myapp://delaio-details" />
    </shortcut>

    <shortcut
        android:shortcutId="lista"
        android:enabled="true"
        android:shortcutShortLabel="@string/compose_shortcut_short_label5"
        android:shortcutLongLabel="@string/shortcuts_screen_list"
        android:shortcutDisabledMessage="@string/compose_disabled_message9">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="myapp://delaio-list" />
    </shortcut>

</shortcuts>